# FlowCrate

./: .gitignore  API_IMPROVEMENT_SUGGESTIONS.md  HANDOFF.md  LICENSE  README.md  flowstate  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
docs/: SIRI_SETUP.md
scripts/: build_universal_shortcut.py  print_old_flowstate_secrets.py  sonos_spike.py
site/: index.html
src/flowcrate/: __init__.py  app.py  cache.py  cli.py  config.py  logs.py  paths.py  playback.py  scraper.py  service.py  shortcut.py  sonos.py  spotify.py  tls.py  workflow.py
src/flowcrate/static/: play-flow-crate-universal.shortcut  styles.css
src/flowcrate/templates/: _entry_table.html  _job_status.html  base.html  create.html  dashboard.html  job.html  log_detail.html  logs.html  preview.html  settings.html  setup.html  status.html
tests/: test_api.py  test_app.py  test_cache.py  test_playback.py  test_service.py  test_spotify_oauth.py
